@@ -1,3 +1,5 @@
+* BUG#9502 Don't auto_uninstall modules
+
 Version 4.8.1 - 2018-05-21
 * Bug fixes (see mercurial logs for details)
 
